5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1712_2506.log
== TEST (2019-05-13 14:05:10) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= int(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi > qc):
	qi = qi +(qi*(qc/100))
	print("LIMITE")



-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:13:36) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= int(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi > qc):
	qi = qi +(qi*(qc/100))
	print("LIMITE")
	if(qv>qi):
		print("EXTINCAO")



-- OUTPUT:
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:17:25) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= int(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi > qc):
	qi = qi +(qi*(qc/100))
	print("LIMITE")
	print(qi)
if(qv>qi):
	print("EXTINCAO")



-- OUTPUT:
LIMITE
1386.5224
LIMITE
1469.7137440000001
LIMITE
1557.8965686400002
LIMITE
1651.3703627584002
LIMITE
1750.4525845239043
LIMITE
1855.4797395953385
LIMITE
1966.8085239710588
LIMITE
2084.817035409322
LIMITE
2209.9060575338817
LIMITE
2342.5004209859144
LIMITE
2483.0504462450695
LIMITE
2632.0334730197737
LIMITE
2789.9554814009603
LIMITE
2957.3528102850178
LIMITE
3134.793978902119
LIMITE
3322.881617636246
LIMITE
3522.254514694421
LIMITE
3733.589785576086
LIMITE
3957.605172710651
LIMITE
4195.06148307329
LIMITE
4446.765172057688
LIMITE
4713.571082381149
LIMITE
4996.385347324018
LIMITE
5296.168468163459
LIMITE
5613.938576253267
LIMITE
5950.774890828463
LIMITE
6307.821384278171
LIMITE
6686.290667334861
LIMITE
7087.4681073749525
LIMITE
7512.7161938174495
LIMITE
7963.479165446496
LIMITE
8441.287915373287
LIMITE
8947.765190295684
LIMITE
9484.631101713425
LIMITE
10053.70896781623
LIMITE
10656.931505885204
LIMITE
11296.347396238316
LIMITE
11974.128240012615
LIMITE
12692.575934413371
LIMITE
13454.130
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:44:39) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +(qi*(qc/100))
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(t)


-- EXECUTION TIME:
0.130841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 17, in <module>
    print(t)
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:44:40) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +(qi*(qc/100))
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(t)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:44:57) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +(qi*(qc/100))
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)


-- EXECUTION TIME:
0.158956
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
39
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
9
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:44:59) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +(qi*(qc/100))
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)


-- OUTPUT:
LIMITE
39
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:45:38) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +(qi*(qc/100))-qv
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)


-- OUTPUT:
LIMITE
39
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:46:18) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)


-- OUTPUT:
LIMITE
39
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:46:55) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +((qi * qi) /100)-qv
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)


-- EXECUTION TIME:
0.359048
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
1
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
2
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:46:56) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +((qi * qi) /100)-qv
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)


-- OUTPUT:
LIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:47:48) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))

a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +((qi * qi) /100)-qv
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
	
print(a)


-- OUTPUT:
LIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:49:03) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0                   #variavel contadora

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qi) /100)-qv
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
	
print(a)


-- OUTPUT:
LIMITE
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:50:30) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0                   #variavel contadora

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi>= 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
	
print(a)


-- EXECUTION TIME:
0.375362
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:50:56) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0                   #variavel contadora

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi>= 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
	
print(a)


-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:51:07) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0                   #variavel contadora

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi>= 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
	
print(a)


-- EXECUTION TIME:
0.33983
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:52:01) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= float(input("quantidade pra venda: "))


qi = qi +(qi*(qc/100))  #variavel acumuladora
a = 0                   #variavel contadora

while(qi < 12000 and qc > 0):
	qi = qi +(qi*(qc/100))-qv
	a = a + 1

if(qi> 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)


-- EXECUTION TIME:
390.194
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:53:24) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi >= 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
	
print(a)
-- EXECUTION TIME:
0.151736
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:53:50) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi >= 1200):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
	
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 14:55:28) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")

print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:55:37) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)-qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")

print(a)
-- EXECUTION TIME:
0.179852
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:08:57) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")

print(a)
-- EXECUTION TIME:
0.109788
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:10:14) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")

print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:10:38) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")

print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:12:46) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:13:05) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi <= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:13:28) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi > 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:13:36) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi > 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- EXECUTION TIME:
0.160342
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:13:40) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi > 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:14:21) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi > 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- EXECUTION TIME:
0.201015
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:14:25) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000 and qi > 0):
	qi = qi +((qi * qc) /100)
	qi = qi-qv
	a = a + 1

if(qi > 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:31:25) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000) and (qi > 0):
	qi = qi +((qi * qc /100)) -qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qc <= 0):
	print("EXTINCAO")
print(a)
-- EXECUTION TIME:
0.191263
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:31:52) 
-- CODE:
qi= int(input("quantidade inicial: "))
qc= float(input("percentual de crescimento: "))
qv= int(input("quantidade pra venda: "))

a = 0

while(qi < 12000) and (qi > 0):
	qi = qi +((qi * qc /100)) -qv
	a = a + 1

if(qi >= 12000):
	print("LIMITE")
elif(qi <= 0):
	print("EXTINCAO")
print(a)
-- EXECUTION TIME:
0.14976
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
